--- a/Frontend/src/components/footer/footer.css
+++ b/Frontend/src/components/footer/footer.css
@@ -6,7 +6,7 @@ footer {
   width: 100%;
   padding: 20px 0;
   margin-top: auto; 
-  border-top: 1px solid rgb(235, 235, 235);
+  border-top: 1px solid var(--text);
 }
 
 .bottom-wrapper,
@@ -18,9 +18,9 @@ footer {
 }
 
 .bottom-logo img {
-  width: 70px;
-  padding: 10px;
+  width: 150px;
   height: auto;
+  padding: 10px;
   object-fit: contain;
 }
 
@@ -51,7 +51,7 @@ footer {
   }
 
   .bottom-logo img {
-    width: 70px;
+    width: 100px;
     height: auto;
   }
 
