--- a/Frontend/src/components/navbar/navbar.css
+++ b/Frontend/src/components/navbar/navbar.css
@@ -6,19 +6,20 @@ header {
   padding-top: 10px;
   width: 100%;
   min-height: 100px;
-  border-bottom: 1px solid rgb(235, 235, 235);
+  border-bottom: 1px solid var(--text);
 }
 
 .nav-wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center; 
+  align-items: center;
+  height: 150px;
 }
 
 .nav-logo img {
-  width: 70px;
+  width: 150px;
+  height: 150px;
   padding: 10px;
-  height: auto;
   object-fit: contain;
 }
 
@@ -100,8 +101,8 @@ header {
   justify-content: center;
   margin: 5px;
   padding: 8px 16px;
-  background-color: #ff6b6b;
-  color: white;
+  background-color: var(--advise-button);
+  color: var(--text);
   border-radius: 4px;
   text-decoration: none;
   transition: background-color 0.3s;
@@ -109,7 +110,7 @@ header {
 }
 
 .login-button:hover {
-  background-color: #ff5252;
+  background-color: var(--advise-button-hover);
 }
 
 .login-button span {
@@ -143,5 +144,11 @@ header {
 
   .nav-item {
     padding: 0 5px;
+  }
+  .nav-logo img {
+    width: 90px;
+    padding: 10px;
+    height: auto;
+    object-fit: contain;
   }
 }
