--- a/Frontend/src/components/footer/footer.css
+++ b/Frontend/src/components/footer/footer.css
@@ -4,7 +4,7 @@ footer {
   justify-content: center;
   display: flex;
   width: 100%;
-  padding: 20px 0;
+  padding: 0;
   margin-top: auto; 
   border-top: 1px solid var(--text);
 }
