--- a/Frontend/src/components/navbar/navbar.css
+++ b/Frontend/src/components/navbar/navbar.css
@@ -3,7 +3,7 @@ header {
   color: var(--text);
   justify-content: center;
   display: flex;
-  padding-top: 10px;
+  padding: 0;
   width: 100%;
   min-height: 100px;
   border-bottom: 1px solid var(--text);
@@ -14,6 +14,7 @@ header {
   justify-content: space-between;
   align-items: center;
   height: 150px;
+  min-width: 700px;
 }
 
 .nav-logo img {
@@ -41,25 +42,21 @@ header {
 .navbar-menu,
 .navbar-auth {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   flex-direction: row;
   list-style: none; 
   padding: 0;
 }
 
 .nav-user-slog {
+  width: 100%;
   display: flex;
   justify-content: end;
-  margin-right: 10px;
-  margin-left: 10px;
+  padding-right: 10px;
 }
 
 .nav-hub-slog {
   margin-left: 10px;
-}
-
-.nav-user-slog {
-  margin-right: 15px;
 }
 
 .nav-item {
@@ -121,34 +118,44 @@ header {
   .navbar-auth .nav-item:nth-child(3) {
     display: none;
   }
+
+  .navbar-auth{
+    justify-content: right;
+  }
 }
 
-@media (max-width: 660px) {
+@media (max-width: 900px) {
+  .nav-wrapper {
+    flex-direction: row;
+    height: auto;
+    min-width: unset;
+    align-items: flex-start;
+    padding: 10px 0;
+  }
   .navbar {
     flex-direction: column;
-  }
-  
-  .nav-hub-slog {
-    margin-left: 5px;
-  }
-
-  .nav-user-slog  {
-    padding: 0;
-    display: none;
-  }
-  
-  .navbar-auth{
     width: 100%;
-    justify-content: space-between;
+    align-items: flex-start;
   }
-
+  .navbar-hub, .navbar-user {
+    width: 100%;
+    align-items: flex-start;
+  }
+  .navbar-menu, .navbar-auth {
+    flex-direction: row;
+    width: 100%;
+    align-items: flex-start;
+  }
   .nav-item {
-    padding: 0 5px;
+    padding: 5px;
+    width: 100%;
   }
   .nav-logo img {
-    width: 90px;
-    padding: 10px;
+    width: 70px;
     height: auto;
-    object-fit: contain;
+    padding: 5px;
+  }
+  .nav-user-slog {
+    display: none;
   }
 }
